--- a/Hitomi-Scroll-Viewer/SearchPageComponent/DownloadItem.xaml
+++ b/Hitomi-Scroll-Viewer/SearchPageComponent/DownloadItem.xaml
@@ -26,11 +26,11 @@
         <RowDefinition/>
     </Grid.RowDefinitions>
     <TextBlock x:Name="Description" Grid.Row="0" Grid.Column="0"
-               TextWrapping="WrapWholeWords"/>
+               TextWrapping="WrapWholeWords" IsTextSelectionEnabled="True"/>
     <ProgressBar x:Name="DownloadProgressBar" Grid.Row="1" Grid.Column="0"
                  Background="Gray"/>
     <TextBlock x:Name="DownloadStatusTextBlock" Grid.Row="2" Grid.Column="0"
-               TextWrapping="WrapWholeWords"/>
+               TextWrapping="WrapWholeWords" IsTextSelectionEnabled="True"/>
     <Button x:Name="DownloadControlBtn" Grid.Row="0" Grid.Column="1"
             Click="PauseOrResume"
             HorizontalAlignment="Stretch"/>
