--- a/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPage.xaml
+++ b/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPage.xaml
@@ -1,10 +1,10 @@
 ﻿<Page
-    x:Class="Hitomi_Scroll_Viewer.SearchPage"
+    x:Class="Hitomi_Scroll_Viewer.MainWindowComponent.SearchPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:spc="using:Hitomi_Scroll_Viewer.SearchPageComponent"
+    xmlns:spc="using:Hitomi_Scroll_Viewer.MainWindowComponent.SearchPageComponent"
     xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
