--- a/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/SearchFilterItem.xaml
+++ b/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/SearchFilterItem.xaml
@@ -1,5 +1,5 @@
 <CheckBox
-    x:Class="Hitomi_Scroll_Viewer.SearchPageComponent.SearchFilterItem"
+    x:Class="Hitomi_Scroll_Viewer.MainWindowComponent.SearchPageComponent.SearchFilterItem"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
