--- a/Hitomi-Scroll-Viewer/MainWindowComponent/ViewPage.xaml
+++ b/Hitomi-Scroll-Viewer/MainWindowComponent/ViewPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Hitomi_Scroll_Viewer.ViewPage"
+    x:Class="Hitomi_Scroll_Viewer.MainWindowComponent.ViewPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
