--- a/Hitomi-Scroll-Viewer/MainWindowComponent/ViewPageComponent/GroupedImagePanel.xaml
+++ b/Hitomi-Scroll-Viewer/MainWindowComponent/ViewPageComponent/GroupedImagePanel.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <controls:DockPanel
+    x:Class="Hitomi_Scroll_Viewer.MainWindowComponent.ImageWatchingPageComponent.GroupedImagePanel"
     xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
-    x:Class="Hitomi_Scroll_Viewer.ImageWatchingPageComponent.GroupedImagePanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     HorizontalAlignment="Center"
