I think I implemented everything except string translation

--- a/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/SyncManagerComponent/SyncContentDialog.xaml
+++ b/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/SyncManagerComponent/SyncContentDialog.xaml
@@ -41,7 +41,7 @@
                     Visibility="Collapsed">
             <StackPanel>
                 <TextBlock Style="{StaticResource BaseTextBlockStyle}">Select how to fetch the tag filters</TextBlock>
-                <RadioButtons x:Name="FetchTagFilterOption0"
+                <RadioButtons x:Name="FetchTagFilterOption1"
                               MaxColumns="2"
                               SelectionChanged="FetchTagFilterOption0_SelectionChanged">
                     <RadioButton>Overwrite</RadioButton>
@@ -50,7 +50,7 @@
             </StackPanel>
             <StackPanel Visibility="Collapsed">
                 <TextBlock Style="{StaticResource BaseTextBlockStyle}">Select how to handle tag filters with duplicate names:</TextBlock>
-                <RadioButtons x:Name="FetchTagFilterOption1"
+                <RadioButtons x:Name="FetchTagFilterOption2"
                               MaxColumns="2"
                               SelectionChanged="FetchTagFilterOption1_SelectionChanged">
                     <RadioButton>Replace them with tag filters from cloud</RadioButton>
@@ -65,7 +65,7 @@
         <StackPanel x:Name="FetchBookmarkOptionStackPanel"
                     Visibility="Collapsed">
             <TextBlock Style="{StaticResource BaseTextBlockStyle}">Start downloading all bookmarks after fetching?</TextBlock>
-            <RadioButtons x:Name="FetchBookmarkOption0"
+            <RadioButtons x:Name="FetchBookmarkOption1"
                           MaxColumns="2"
                           SelectionChanged="FetchBookmarkOption0_SelectionChanged">
                 <RadioButton>Yes</RadioButton>
@@ -75,7 +75,10 @@
         <ProgressBar x:Name="SyncProgressBar"
                      IsIndeterminate="True"
                      Visibility="Collapsed"></ProgressBar>
-        <InfoBar x:Name="SyncErrorInfoBar"
+        <InfoBar x:Name="TagFilterSyncResultInfoBar"
+                 IsOpen="False"
+                 IsClosable="False"/>
+        <InfoBar x:Name="BookmarkSyncResultInfoBar"
                  IsOpen="False"
                  IsClosable="False"/>
     </StackPanel>
