--- a/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/SyncManagerComponent/SyncContentDialog.xaml
+++ b/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/SyncManagerComponent/SyncContentDialog.xaml
@@ -6,6 +6,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
+
+    x:Uid="/SyncContentDialog/SyncContentDialog"
     Style="{ThemeResource DefaultContentDialogStyle}"
     DefaultButton="Primary"
     IsPrimaryButtonEnabled="False"
@@ -14,6 +16,11 @@
     CloseButtonClick="ContentDialog_CloseButtonClick"
     Closing="ContentDialog_Closing"
     >
+    <ContentDialog.Resources>
+        <!-- double max value -->
+        <!-- this is needed because of a bug: https://github.com/microsoft/microsoft-ui-xaml/issues/424 -->
+        <x:Double x:Key="ContentDialogMaxWidth">9223372036854775807</x:Double>
+    </ContentDialog.Resources>
     <ContentDialog.Title>
         <TextBlock x:Uid="/SyncContentDialog/TitleTextBlock" TextWrapping="WrapWholeWords"/>
     </ContentDialog.Title>
