--- a/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/TagFilterCheckBox.xaml
+++ b/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/TagFilterCheckBox.xaml
@@ -1,10 +1,10 @@
 <CheckBox
-    x:Class="Hitomi_Scroll_Viewer.MainWindowComponent.SearchPageComponent.SearchFilterItem"
+    x:Class="Hitomi_Scroll_Viewer.MainWindowComponent.SearchPageComponent.TagFilterCheckBox"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     MinWidth="0">
-    <TextBlock Text="{x:Bind TagName}" TextWrapping="Wrap"></TextBlock>
+    <TextBlock Text="{x:Bind TagFilterName}" TextWrapping="Wrap"></TextBlock>
 </CheckBox>
