--- a/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/TagFilterEditControl.xaml
+++ b/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/TagFilterEditControl.xaml
@@ -1,5 +1,5 @@
 <Grid
-    x:Class="Hitomi_Scroll_Viewer.MainWindowComponent.SearchPageComponent.TagContainer"
+    x:Class="Hitomi_Scroll_Viewer.MainWindowComponent.SearchPageComponent.TagFilterEditControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -13,15 +13,5 @@
     <Grid.RowDefinitions>
         <RowDefinition/>
         <RowDefinition/>
-        <RowDefinition/>
     </Grid.RowDefinitions>
-
-    <Border x:Name="HeaderBorder"
-            Grid.Row="0" Grid.Column="0"
-            BorderThickness="1" BorderBrush="Black">
-        <TextBlock x:Name="Header"
-                   HorizontalAlignment="Center" VerticalAlignment="Center"
-                   Style="{StaticResource SubtitleTextBlockStyle}">
-        </TextBlock>
-    </Border>
 </Grid>
